--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,39 @@ a:hover {
 body {
   overflow-wrap: break-word;
 }
+/* carousel */
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+  display: flex;
+}
+.carousel-caption {
+  position: absolute;
+  top: 0;
+}
+
+.carousel-caption h2 {
+  color: #fff;
+}
+
+.carousel img {
+  height: 300px;
+  padding: 30px;
+  margin: 40px;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.carousel a {
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
+  .carousel-caption h2 {
+    font-size: 2.6vw;
+  }
+}
+@media (min-width: 990px) and (max-width: 1200px) {
+  #productSelect {
+    background-image: none;
+  }
+}
